Another small change in DefaultQueryBuilderSupplier.
Signed-off-by: Tomáš Kraus <tomas.kraus@oracle.com>